# raymarching-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile
res/shaders/: basic.slang  basic.wgsl
src/: app.hpp  main.cpp
src/gfx/: camera.cpp  camera.hpp  context.cpp  context.hpp  pipeline.cpp  pipeline.hpp  quad.hpp  renderer.cpp  renderer.hpp
src/utils/: logger.cpp  logger.hpp  region.hpp
